Simplified style for smaller font with separate selector

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1>
         <a name="PROFILE">profile<img src="images/sun.png" /></a>
       </h1>
-      <p>
+      <p class="smallText">
         Born on February 14, 2002. Grew up in Al-Khobar, Saudi Arabia as an
         introverted kid; Spoiled brat turned aspiring optimist - only took 18
         years to get off her ass and start opening her eyes and see the beauty
@@ -52,7 +52,7 @@
       <a name="LDS"><img src="images/moonstar.png" />likes&dislikes</a>
     </h1>
     <section class="lds parallax">
-      <table>
+      <table class="smallText">
         <tr>
           <th>likes</th>
           <th>dislikes</th>
@@ -93,7 +93,7 @@
       <h1>
         <a name="HOBBIES">hobbies<img src="images/naruto.png" /></a>
       </h1>
-      <table class="box">
+      <table class="box smallText">
         <tr>
           <th>i like to...</th>
         </tr>
@@ -110,22 +110,22 @@
         </tr>
       </table>
 
-      <p class="corner">currently obsessed with: naruto, p5r, gacha games</p>
+      <p class="corner smallText">currently obsessed with: naruto, p5r, gacha games</p>
     </section>
     <h1 class="right">
       <a name="FAMILY"><img src="images/home.png" />family</a>
     </h1>
     <section class="fam parallax"></section>
-    <p>
+    <p class ="smallText">
       (From left to right) My dad, my mom, me (youngest), my sister's boyfriend,
       my sister (eldest), and my brother (middle child).
     </p>
-    <h3 class="important">
+    <h3 class="important smallText">
       “The family is the test of freedom; because the family is the only thing
       that the free man makes for himself and by himself.” – G.K. Chesterton
     </h3>
     <hr width="100%" color="white" />
-    <div class="speech">
+    <div class="speech smallText">
       Being a family full of - for a lack of better word - sheltered introverts,
       life isn't always as exciting or adventurous as others' lives, especially
       now with the very precarious situation and circumstances taking over the
@@ -142,7 +142,7 @@
       main theme of my site here -
       <i>物の哀れ [Mono no aware], the beauty of transience.</i>
     </div>
-    <p>
+    <p class="smallText">
       <i>Mono no aware,</i> the Japanese love for impermanence, is literally
       what it means - appreciating the beauty of the feeling of "fleeting";
       everlasting change.
@@ -154,7 +154,7 @@
           <div class="blue"><img src="images/keyboard.gif" /></div
         ></a>
       </h1>
-      <div class="hopes">
+      <div class="hopes smallText">
         I aspire to be a bonafide passionate web and game developer. Completely
         enamored with video games and technology ever since I was a kid, I
         decided one day I'd stop repressing my love for them and actually take
@@ -169,6 +169,6 @@
       </div>
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
-    <div class="important back"><a href="#TOP">Back to top</a></div>
+    <div class="important back smallText"><a href="#TOP">Back to top</a></div>
   </body>
 </html>
