Added links to new font for h1 and smallText

--- a/index.html
+++ b/index.html
@@ -2,6 +2,18 @@
   <head>
     <title>物の哀れ; beauty of transience</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Spectral:wght@200;300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kameron&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nunito&display=swap"
+      rel="stylesheet"
+    />
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
   <body>
@@ -110,13 +122,15 @@
         </tr>
       </table>
 
-      <p class="corner smallText">currently obsessed with: naruto, p5r, gacha games</p>
+      <p class="corner smallText">
+        currently obsessed with: naruto, p5r, gacha games
+      </p>
     </section>
     <h1 class="right">
       <a name="FAMILY"><img src="images/home.png" />family</a>
     </h1>
     <section class="fam parallax"></section>
-    <p class ="smallText">
+    <p class="smallText">
       (From left to right) My dad, my mom, me (youngest), my sister's boyfriend,
       my sister (eldest), and my brother (middle child).
     </p>
