Adjusted header alignment and margins; adjustments to hobbies dimensions

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <li>play video games and salt-swear like a sailor</li>
               <li>listen to music and screech like a banshee</li>
               <li>draw fanart and fail anatomy/proportions</li>
-              <li>write fics and overanalyze my favs</li>
+              <li>write fics and vomit shitty grammar</li>
             </ul>
           </td>
         </tr>
