Added viewport settings in meta tag to adjust to mobile devices

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>物の哀れ; beauty of transience</title>
     <link rel="stylesheet" href="style.css" />
     <link
