Added source link for icons used

--- a/index.html
+++ b/index.html
@@ -184,5 +184,7 @@
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
     <div class="important back smallText"><a href="#TOP">Back to top</a></div>
+    <hr width=25% color="white">
+    <a href="https://icons8.com/" class="smallText">Icons by Icons8</a>
   </body>
 </html>
