Centered icon credits

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
       </div>
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
-    <div class="important back smallText"><a href="#TOP">Back to top</a></div>
+    <footer class="important back smallText"><a href="#TOP">Back to top</a>
     <hr width=25% color="white">
-    <a href="https://icons8.com/" class="smallText">Icons by Icons8</a>
+    <a href="https://icons8.com/" class="credits">Icons by Icons8</a></footer>
   </body>
 </html>
