Moved family pic caption to the side

--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
     <h1 class="right">
       <a name="FAMILY"><img src="images/home.png" />family</a>
     </h1>
-    <section class="fam parallax"></section>
-    <p class="smallText">
-      (From left to right) My dad, my mom, me (youngest), my sister's boyfriend,
-      my sister (eldest), and my brother (middle child).
-    </p>
+    <section class="fam parallax">
+      <p class="corner smallText side">
+        (From left to right) My dad, my mom, me (youngest), my sister's
+        boyfriend, my sister (eldest), and my brother (middle child).
+      </p>
+    </section>
     <h3 class="important smallText">
       “The family is the test of freedom; because the family is the only thing
       that the free man makes for himself and by himself.” – G.K. Chesterton
@@ -183,8 +184,10 @@
       </div>
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
-    <footer class="important back smallText"><a href="#TOP">Back to top</a>
-    <hr width=25% color="white">
-    <a href="https://icons8.com/" class="credits">Icons by Icons8</a></footer>
+    <footer class="important back smallText">
+      <a href="#TOP">Back to top</a>
+      <hr width="25%" color="white" />
+      <a href="https://icons8.com/" class="credits">Icons by Icons8</a>
+    </footer>
   </body>
 </html>
