Removed loader and added fade-in effect to body; Added up arrow to back to top button

--- a/index.html
+++ b/index.html
@@ -17,10 +17,6 @@
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
   <body>
-    <script src="script.js"></script>
-    <div id="overlay">
-      <div class="loader"></div>
-    </div>
     <header>
       <a name="TOP"></a>
       <h1 class="important">dana andrea espejo callejo</h1>
@@ -185,6 +181,7 @@
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
     <footer class="important back smallText">
+      <a href="#TOP">︿</a>
       <a href="#TOP">Back to top</a>
       <hr width="25%" color="white" />
       <a href="https://icons8.com/" class="credits">Icons by Icons8</a>
