Added text shadow to p elements and adjusted positioning of side class

--- a/index.html
+++ b/index.html
@@ -33,18 +33,18 @@
           width="612px"
         />
         <map name="petals">
-          <area shape="circle" coords="294,127,50" alt="bud1" href="#PROFILE" />
-          <area shape="circle" coords="246,210,50" alt="bud2" href="#LDS" />
-          <area shape="circle" coords="337,220,50" alt="bud3" href="#HOBBIES" />
-          <area shape="circle" coords="255,288,50" alt="bud4" href="#FAMILY" />
-          <area shape="circle" coords="336,303,50" alt="bud5" href="#DREAMS" />
+          <area shape="circle" coords="294,127,50" alt="bud1" href="#prfl" />
+          <area shape="circle" coords="246,210,50" alt="bud2" href="#lks" />
+          <area shape="circle" coords="337,220,50" alt="bud3" href="#hbs" />
+          <area shape="circle" coords="255,288,50" alt="bud4" href="#fmly" />
+          <area shape="circle" coords="336,303,50" alt="bud5" href="#drms" />
         </map>
         <hr width="50%" color="white" />
       </div>
     </header>
     <section class="profile parallax">
       <h1>
-        <a name="PROFILE">profile<img src="images/sun.png" /></a>
+        <a name="prfl">profile<img src="images/sun.png" /></a>
       </h1>
       <p class="smallText">
         Born on February 14, 2002. Grew up in Al-Khobar, Saudi Arabia as an
@@ -57,7 +57,7 @@
       </p>
     </section>
     <h1 class="right">
-      <a name="LDS"><img src="images/moonstar.png" />likes&dislikes</a>
+      <a name="lks"><img src="images/moonstar.png" />likes&dislikes</a>
     </h1>
     <section class="lds parallax">
       <table class="smallText">
@@ -99,7 +99,7 @@
     </section>
     <section class="hobbies parallax">
       <h1>
-        <a name="HOBBIES">hobbies<img src="images/naruto.png" /></a>
+        <a name="hbs">hobbies<img src="images/naruto.png" /></a>
       </h1>
       <table class="box smallText">
         <tr>
@@ -123,7 +123,7 @@
       </p>
     </section>
     <h1 class="right">
-      <a name="FAMILY"><img src="images/home.png" />family</a>
+      <a name="fmly"><img src="images/home.png" />family</a>
     </h1>
     <section class="fam parallax">
       <p class="corner smallText side">
@@ -160,7 +160,7 @@
     </p>
     <section class="dreams parallax">
       <h1>
-        <a name="DREAMS"
+        <a name="drms"
           >hopes&dreams<img src="images/heart.png" />
           <div class="blue"><img src="images/keyboard.gif" /></div
         ></a>
