Added text indent to h1 elements

--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         years to get off her ass and start opening her eyes and see the beauty
         in grabbing change by its balls and owning it. Now a local Filipino weeb
         coding and watching anime like a hermit in quarantine, hence all this
-        lol. Questioning bisexual INFP insert-other-
-        complicated-sounding-qualities-etc.
+        lol. Bisexual, INFP.
       </p>
     </section>
     <h1 class="right">
@@ -180,7 +179,7 @@
       </div>
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
-    <footer class="important back smallText">
+    <footer class="important smallText">
       <a href="#TOP">︿</a>
       <a href="#TOP">Back to top</a>
       <hr width="25%" color="white" />
