Replacced colors of photo boxes under dreams

--- a/index.html
+++ b/index.html
@@ -160,10 +160,9 @@
     <section class="dreams parallax">
       <h1>
         <a name="drms"
-          >hopes&dreams<img src="images/heart.png" />
+          >hopes&dreams</a><img src="images/heart.png" /></h1>
           <div class="blue"><img src="images/keyboard.gif" /></div
-        ></a>
-      </h1>
+        >
       <div class="hopes smallText">
         I aspire to be a bonafide passionate web and game developer. Completely
         enamored with video games and technology ever since I was a kid, I
