Increased dreams section's height and rearranged boxed photos' position

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header>
-      <a name="TOP"></a>
+      <a name="top"></a>
       <h1 class="important">dana andrea espejo callejo</h1>
       <div class="midhead">
         <hr width="35%" color="white" />
@@ -160,7 +160,7 @@
     <section class="dreams parallax">
       <h1>
         <a name="drms"
-          >hopes&dreams</a><img src="images/heart.png" /></h1>
+          >hopes&dreams<img src="images/heart.png" /></a></h1>
           <div class="blue"><img src="images/keyboard.gif" /></div
         >
       <div class="hopes smallText">
@@ -179,8 +179,8 @@
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
     <footer class="important smallText">
-      <a href="#TOP">︿</a>
-      <a href="#TOP">Back to top</a>
+      <a href="#top">︿</a>
+      <a href="#top">Back to top</a>
       <hr width="25%" color="white" />
       <a href="https://icons8.com/" class="credits">Icons by Icons8</a>
     </footer>
