Created new css file 'text' and transferred  all text styling

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>物の哀れ; beauty of transience</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="text.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Spectral:wght@200;300&display=swap"
       rel="stylesheet"
