--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <title>物の哀れ; beauty of transience</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="text.css" />
+    <link rel="stylesheet" href="photos.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Spectral:wght@200;300&display=swap"
       rel="stylesheet"
