--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="text.css" />
     <link rel="stylesheet" href="photos.css" />
+    <link rel="stylesheet" href="animations.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Spectral:wght@200;300&display=swap"
       rel="stylesheet"
