--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       </div>
     </header>
     <section class="profile parallax">
-      <h1>
+      <h1 class="left">
         <a name="prfl">profile<img src="images/sun.png" /></a>
       </h1>
       <p class="smallText">
@@ -100,7 +100,7 @@
       </table>
     </section>
     <section class="hobbies parallax">
-      <h1>
+      <h1 class="left">
         <a name="hbs">hobbies<img src="images/naruto.png" /></a>
       </h1>
       <table class="box smallText">
@@ -161,7 +161,7 @@
       everlasting change.
     </p>
     <section class="dreams parallax">
-      <h1>
+      <h1 class="left">
         <a name="drms"
           >hopes&dreams<img src="images/heart.png" /></a></h1>
           <div class="blue"><img src="images/keyboard.gif" /></div
