--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
   <body>
+    <div id="overlay"></div>
     <div class="spinner"></div>
     <header>
       <a name="top"></a>
