Added code to js file for preloader animation

--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
   <body>
-    <div id="overlay"></div>
-    <div class="spinner"></div>
+    <script src="script.js"></script>
+    <div id="overlay">
+      <div class="spinner"></div>
+    </div>
     <header>
       <a name="top"></a>
       <h1 class="important">dana andrea espejo callejo</h1>
@@ -164,10 +166,9 @@
     </p>
     <section class="dreams parallax">
       <h1 class="left">
-        <a name="drms"
-          >hopes&dreams<img src="images/heart.png" /></a></h1>
-          <div class="blue"><img src="images/keyboard.gif" /></div
-        >
+        <a name="drms">hopes&dreams<img src="images/heart.png" /></a>
+      </h1>
+      <div class="blue"><img src="images/keyboard.gif" /></div>
       <div class="hopes smallText">
         I aspire to be a bonafide passionate web and game developer. Completely
         enamored with video games and technology ever since I was a kid, I
