--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <script src="script.js"></script>
     <div id="overlay">
-      <div class="spinner"></div>
+      <div class="loader"></div>
     </div>
     <header>
       <a name="top"></a>
