Added text slide-in for petal anchor tags

--- a/index.html
+++ b/index.html
@@ -40,12 +40,28 @@
           width="612px"
         />
         <map name="petals">
-          <area shape="circle" coords="294,127,50" alt="bud1" href="#prfl" />
-          <area shape="circle" coords="246,210,50" alt="bud2" href="#lks" />
-          <area shape="circle" coords="337,220,50" alt="bud3" href="#hbs" />
-          <area shape="circle" coords="255,288,50" alt="bud4" href="#fmly" />
-          <area shape="circle" coords="336,303,50" alt="bud5" href="#drms" />
+          <div id="container">
+            <area shape="circle" coords="294,127,50" alt="bud1" href="#prfl" />
+            <div class="text smallText">profile</div>
+          </div>
+          <div id="container">
+            <area shape="circle" coords="246,210,50" alt="bud2" href="#lks" />
+            <div class="text smallText">likes & dislikes</div>
+          </div>
+          <div id="container">
+            <area shape="circle" coords="337,220,50" alt="bud3" href="#hbs" />
+            <div class="text smallText">hobbies</div>
+          </div>
+          <div id="container">
+            <area shape="circle" coords="255,288,50" alt="bud4" href="#fmly" />
+            <div class="text smallText">family</div>
+          </div>
+          <div id="container">
+            <area shape="circle" coords="336,303,50" alt="bud5" href="#drms" />
+            <div class="text smallText">hopes & dreams</div>
+          </div>
         </map>
+        <div id="container"><div class="text smallText">profile</div></div>
         <hr width="50%" color="white" />
       </div>
     </header>
