--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <head>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86"
+    />
     <title>物の哀れ; beauty of transience</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="text.css" />
@@ -40,28 +44,22 @@
           width="612px"
         />
         <map name="petals">
-          <div id="container">
-            <area shape="circle" coords="294,127,50" alt="bud1" href="#prfl" />
-            <div class="text smallText">profile</div>
-          </div>
-          <div id="container">
-            <area shape="circle" coords="246,210,50" alt="bud2" href="#lks" />
-            <div class="text smallText">likes & dislikes</div>
-          </div>
-          <div id="container">
-            <area shape="circle" coords="337,220,50" alt="bud3" href="#hbs" />
-            <div class="text smallText">hobbies</div>
-          </div>
-          <div id="container">
-            <area shape="circle" coords="255,288,50" alt="bud4" href="#fmly" />
-            <div class="text smallText">family</div>
-          </div>
-          <div id="container">
-            <area shape="circle" coords="336,303,50" alt="bud5" href="#drms" />
-            <div class="text smallText">hopes & dreams</div>
-          </div>
+          <span title="profile"
+            ><area shape="circle" coords="294,127,50" alt="bud1" href="#prfl"
+          /></span>
+          <span title="likes & dislikes"
+            ><area shape="circle" coords="246,210,50" alt="bud2" href="#lks"
+          /></span>
+          <span title="hobbies"
+            ><area shape="circle" coords="337,220,50" alt="bud3" href="#hbs"
+          /></span>
+          <span title="family"
+            ><area shape="circle" coords="255,288,50" alt="bud4" href="#fmly"
+          /></span>
+          <span title="hopes & dreams"
+            ><area shape="circle" coords="336,303,50" alt="bud5" href="#drms"
+          /></span>
         </map>
-        <div id="container"><div class="text smallText">profile</div></div>
         <hr width="50%" color="white" />
       </div>
     </header>
