Added title to back to top buttons and icons8 credit links

--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
     <footer class="important smallText">
-      <a href="#top">︿</a>
-      <a href="#top">Back to top</a>
+      <a href="#top" title="Top">︿</a>
+      <a href="#top" title="Top">Back to top</a>
       <hr width="25%" color="white" />
-      <a href="https://icons8.com/" class="credits">Icons by Icons8</a>
+      <a href="https://icons8.com/" class="credits" title="Icons8 website">Icons by Icons8</a>
     </footer>
   </body>
 </html>
