--- a/index.html
+++ b/index.html
@@ -1,9 +1,6 @@
 <html>
   <head>
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=0.86, maximum-scale=3.0, minimum-scale=0.86"
-    />
+    <meta name="viewport" content="width=1060px, maximum-scale=1.0" />
     <title>物の哀れ; beauty of transience</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="text.css" />
