Removed inline styling and created footerhr selector

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <a href="#top" title="Top">Back to top</a>
       <img
         src="images/mark.svg"
-        style="filter: brightness(0) invert(1); transform: scale(0.5, 0.5);"
+        class="footerhr"
       />
       <h2 class="important" style="font-size: 18px;">Aim even higher.</h2>
     </footer>
