Fixed typo in footer quote

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         src="images/mark.svg"
         class="footerhr"
       />
-      <h2 class="important" style="font-size: 18px;">Aim even higher.</h2>
+      <h2 class="important" style="font-size: 18px;">"Aim even higher."</h2>
     </footer>
   </body>
 </html>
