Repositioned cover class

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2 class="important">
           "Inexperienced, heartless, but even so... Be beautiful."
         </h2>
-        <div class="cover smallText">click the flowers!</div>
+        <div class="cover smallText">click on the flowers!</div>
         <img
           src="images/violet.png"
           class="photo"
