Added replace text effect on hover to 'click on the flowers' caption

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
       <h1 class="important">dana andrea espejo callejo</h1>
       <div class="midhead">
         <hr width="35%" color="white" />
-        <h2 class="important">
+        <h2 class="important cover"><span>
           "Inexperienced, heartless, but even so... Be beautiful."
+        </span>
         </h2>
-        <div class="cover smallText">(click on the flowers!)</div>
         <img
           src="images/violet.png"
           class="photo"
