Added push content effect to sidenav bar and ease transition to sidenav toggle button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
-  <body>
+  <body id="main">
     <script src="script.js"></script>
     <div id="overlay">
       <div class="loader"></div>
@@ -36,9 +36,7 @@
         <a href="#drms">hopes & dreams</a>
       </div>
       <span
-        onclick="openNav()"
-        style="cursor: pointer; top: 40%; position: fixed;"
-        ><h3>☰</h3></span
+        onclick="openNav()" class="nav"><h3>☰</h3></span
       >
       <a name="top"></a>
       <h1 class="important">dana andrea espejo callejo</h1>
