Added title to links under sidenav

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()"
           >&times;</a
         >
-        <a href="#prfl">profile</a>
-        <a href="#lks">likes & dislikes</a>
-        <a href="#hbs">hobbies</a>
-        <a href="#fmly">family</a>
-        <a href="#drms">hopes & dreams</a>
+        <a href="#prfl" title="profile">profile</a>
+        <a href="#lks" title="likes & dislikes">likes & dislikes</a>
+        <a href="#hbs" title="hobbies">hobbies</a>
+        <a href="#fmly" title="family">family</a>
+        <a href="#drms" title="hopes & dreams">hopes & dreams</a>
       </div>
       <span
         onclick="openNav()" class="nav"><h3>☰</h3></span
