Optimized code formatting

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
         <a href="#fmly" title="family">family</a>
         <a href="#drms" title="hopes & dreams">hopes & dreams</a>
       </div>
-      <span
-        onclick="openNav()" class="nav"><h3>☰</h3></span
-      >
+      <span onclick="openNav()" class="nav"><h3>☰</h3></span>
       <a name="top"></a>
       <h1 class="important">dana andrea espejo callejo</h1>
       <div class="midhead">
