Changed 'important' selector to 'center'; Removed sidenav's push content effect

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="shortcut icon" type="image/png" href="images/flower.png" />
   </head>
-  <body id="main">
+  <body>
     <script src="script.js"></script>
     <div id="overlay">
       <div class="loader"></div>
@@ -37,10 +37,10 @@
       </div>
       <span onclick="openNav()" class="nav"><h3>☰</h3></span>
       <a name="top"></a>
-      <h1 class="important">dana andrea espejo callejo</h1>
+      <h1 class="center">dana andrea espejo callejo</h1>
       <div class="midhead">
         <hr width="35%" color="white" />
-        <h2 class="important cover">
+        <h2 class="center cover">
           <span>
             "Inexperienced, heartless, but even so... Be beautiful."
           </span>
@@ -160,7 +160,7 @@
         boyfriend, my sister (eldest), and my brother (middle child).
       </p>
     </section>
-    <h3 class="important smallText">
+    <h3 class="center smallText">
       “The family is the test of freedom; because the family is the only thing
       that the free man makes for himself and by himself.” – G.K. Chesterton
     </h3>
@@ -207,11 +207,11 @@
       </div>
       <div class="pink"><img src="images/jp.gif" /></div>
     </section>
-    <footer class="important smallText">
+    <footer class="center smallText">
       <a href="#top" title="Top">︿</a>
       <a href="#top" title="Top">Back to top</a>
       <img src="images/mark.svg" class="footerhr" />
-      <h2 class="important" style="font-size: 18px;">"Aim ever higher."</h2>
+      <h2 class="center" style="font-size: 18px;">"Aim ever higher."</h2>
     </footer>
   </body>
 </html>
